# FlyByLogic

./: .gitignore  README.md  RunAllExamples.m
AATC_cpp/: .gitignore  AATC.cpp  AATC.h  AATC_test.cpp  CMakeLists.txt  FBL_gui_interface.cpp  Instructions.txt  main.cpp  test
AATC_cpp/missions/: mission.txt
CaseStudy/: CaseStudyMain_boolean_iccps.m  CaseStudyMain_iccps.m  Mission_Get_Initial_Waypoints.m  Mission_Get_Initial_Waypoints_stop_and_go.m  Mission_Main.m  Mission_Robustness.m  Mission_Robustness_exact.m  Mission_Robustness_exact_stop_and_go.m  Mission_Robustness_stop_and_go.m  case_get_init_waypoints.m  case_robustness.m  planMission.m  planMission_stop_and_go.m  plotMission.m  plotMission_stop_and_go.m
Documentation/: Instructions.md  QuickReadme.txt
Gui/: .gitignore  Mission_Gui.asv  Mission_Gui.fig  Mission_Gui.m  Mission_Gui.m~  default1.yaml  default2.yaml
Maps_mrsl/: Empty_map.txt  map0.txt  map1.txt  map1.txt~  map2.txt  ruralmap.txt
MiscFunctions/: SmoothMax.m  SmoothMin.m  generate_waypoints.m  getObstacles.m  load_map.m  plot_env.m  plot_path.m  random_p0_generator.m
Missions/: Mission1.mat  Mission2.mat  Mission3.mat  alw_ev.mat  cpp_test.mat  cpp_test_goal.mat  current_mission.txt  current_mission_output.txt  default.mat  patrol.mat  simple_RA.mat  twodrone_surveil.mat
SmoothRobustness/: ReachAvoidExample.m  Readme.txt  alwEv.m  evAlw.m  robustness_reachavoid.m  testSrob.m  test_alwEv.m  test_evAlw.m  test_speeds.m
manual/: .gitignore  Instructions.md  main.tex  usermanual.tex
stop_and_go_trajs/: .gitignore  cost_reach_avoid.m  (+10 more)
(+45 files in other folders)
